welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:6: error: reassignment to val
 		k=k+1
                 ^